Implement Target ARC type generation
Backend Target ARC entities, services and resources to represent AAS structures

Connection between frontend and backend in order to create, update and delete AAS Target ARCs

Connect Target ARCs for AAS to a Transformation.

Generate DTS for Target AAS Arcs